Closed Bug 1741293 Opened 4 years ago Closed 3 years ago

Download icon is almost invisible with system theme (GNOME Adwaita Dark) after a download has been completed

Categories

(Core :: Widget: Gtk, defect, P3)

Firefox 94
defect

Tracking

()

VERIFIED FIXED
101 Branch
Tracking Status
firefox99 --- wontfix
firefox100 --- verified
firefox101 --- verified

People

(Reporter: u695624, Assigned: emilio)

References

(Blocks 1 open bug)

Details

Attachments

(7 files)

User Agent: Mozilla/5.0 (X11; Fedora; Linux x86_64; rv:94.0) Gecko/20100101 Firefox/94.0

Steps to reproduce:

  1. Enable Adwaita Dark in GNOME Tweak Tool;
  2. Enable "use the system theme" in Firefox customization settings;
  3. Download a file and wait for the process to finish.

Actual results:

When the download is completed, the icon fetch the system accent color to indicate that a download got completed. The problem is that Adwaita Dark uses a dark background (really!!! hehe) and the accent color is dark blue.

Expected results:

Maybe the design of the icon could be different: a small orange dot at the top right of the icon is a solution that I thought of.

Summary: When running Firefox (with system theme) in GNOME with Adwaita Dark theme, the download icon gets almost invisible after a download has been completed → When running Firefox (with system theme) in GNOME with the Adwaita Dark theme, the download icon gets almost invisible after a download has been completed

The Bugbug bot thinks this bug should belong to the 'Core::Widget: Gtk' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.

Component: Untriaged → Widget: Gtk
Product: Firefox → Core
Summary: When running Firefox (with system theme) in GNOME with the Adwaita Dark theme, the download icon gets almost invisible after a download has been completed → Download icon almost invisible with system theme (GNOME Adwaita Dark) after a download has been completed
Blocks: gtktheme
Priority: -- → P3

Maybe the contrast would be better if the toolbar background wasn't so bright? It seems exceptional; I don't see such a bright background anywhere in gtk3-widget-factory.

Summary: Download icon almost invisible with system theme (GNOME Adwaita Dark) after a download has been completed → Download icon is almost invisible with system theme (GNOME Adwaita Dark) after a download has been completed
Attached image Proposed design change

Maybe the icon could appear with a green dot actually.

On light themes this is basically indiscernible (afaict). On dark themes
this keeps looking good, but it increases the contrast with the accent
color, which in the case of Adwaita-dark is well, pretty dark.

Assignee: nobody → emilio
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/771fc3e75f1e Make Linux native theme toolbar bgimage a bit less opaque. r=dao
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 99 Branch
Regressions: 1757506
Attached image image.png

Even after the fix, contrast is still pretty bad, IMHO.

Status: RESOLVED → REOPENED
Resolution: FIXED → ---

The issue still remains in firefox-99.0b2

GTK3 doesn't have accent colors per se so we reuse the "selected item"
colors.

However, GTK4 does, and dark and light accent colors in libadwaita are
the same, so special-case Adwaita to copy the colors from the light
theme.

Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/931e3006a9bf Make Adwaita dark accent color the same as Adwaita light. r=stransky
Status: REOPENED → RESOLVED
Closed: 3 years ago3 years ago
Resolution: --- → FIXED
Target Milestone: 99 Branch → 101 Branch

Thank you Andreea :))

(In reply to Emilio Cobos Álvarez (:emilio) from comment #12)

Thank you Andreea :))

Any time :D

Attached image screenshot

Comment on attachment 9271093 [details]
Bug 1741293 - Make Adwaita dark accent color the same as Adwaita light. r=stransky

Beta/Release Uplift Approval Request

  • User impact if declined: Linux dark mode theme with the default GNOME theme (e.g., on Fedora / Arch) may get poor contrast in some parts of the UI, like the download button and the bookmark star.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: comment 0, etc
  • List of other uplifts needed: none
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Relatively simple fix / special-case for the Adwaita theme to match newer GTK versions. Might be worth landing across bug 1757506 since it also addresses issues with the same system theme.
  • String changes made/needed: none
Attachment #9271093 - Flags: approval-mozilla-beta?

(I think given the change is scoped to Adwaita, and the fix is reasonably simple, and we are also uplifting bug 1757506, it might be worth uplifting this to beta as well)

Blocks: 1763746
QA Whiteboard: [qa-triaged]

Reproduced the issue with an affected Nightly build (2021-11-15), using STR from comment 0.

The issue is verified as fixed on Ubuntu 18.04 x64, with latest Nightly 101.0a1.

Comment on attachment 9271093 [details]
Bug 1741293 - Make Adwaita dark accent color the same as Adwaita light. r=stransky

Approved for 100.b4

Attachment #9271093 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

This bug is also verified as fixed on latest Beta 100.0b4, under Ubuntu 18.04 x64.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: