Bug 1741293 - Make Adwaita dark accent color the same as Adwaita light. r=stransky,a=dsmith

GTK3 doesn't have accent colors per se so we reuse the "selected item"
colors.

However, GTK4 does, and dark and light accent colors in libadwaita are
the same, so special-case Adwaita to copy the colors from the light
theme.

Differential Revision: https://phabricator.services.mozilla.com/D143064